--- a/main.css
+++ b/main.css
@@ -38,5 +38,5 @@
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:none;font-family:Inter,Arial,sans-serif;justify-content:center;left:0;position:fixed;right:0;top:0;z-index:10}
 .popup_is-animated{display:flex;opacity:0;pointer-events:none;transition:visibility 0s .6s,opacity .6s;-webkit-user-select:none;-moz-user-select:none;user-select:none;visibility:hidden}
 .popup_is-opened{display:flex;opacity:1;pointer-events:all;transition:visibility 0s,opacity .6s;visibility:visible}
-.form__input_type_error{border-bottom:1px solid red}.form__input-error{color:red;font-size:12px;font-weight:400;letter-spacing:0;line-height:15px;margin-top:4px;position:absolute;text-align:left;transition:.3s;visibility:hidden}.form__input-error_active{display:block;visibility:visible}
+.form__input_type_error{border-bottom:1px solid red}.form__input-error{color:red;font-size:12px;font-weight:400;letter-spacing:0;line-height:15px;margin-top:4px;text-align:left;transition:.3s;visibility:hidden}.form__input-error_active{display:block;visibility:visible}
 
